RESOLVED FIXED288949
REGRESSION (290132@main): invalid optional inWebKit::WebPage::commitPotentialTap
https://bugs.webkit.org/show_bug.cgi?id=288949
Summary REGRESSION (290132@main): invalid optional inWebKit::WebPage::commitPotentialTap
Matt Woodrow
Reported 2025-03-02 19:25:54 PST
Attachments
Matt Woodrow
Comment 1 2025-03-02 19:26:57 PST
EWS
Comment 2 2025-03-04 12:50:11 PST
Committed 291584@main (03d29ddfa398): <https://commits.webkit.org/291584@main> Reviewed commits have been landed. Closing PR #41755 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.