REGRESSION (290132@main): invalid optional inWebKit::WebPage::commitPotentialTap. https://bugs.webkit.org/show_bug.cgi?id=288949 <rdar://145733671>

Reviewed by Simon Fraser.

This can happen before the first transaction after commiting the load has been
received, but only recently was the latter using an optional (previously just
default initialized to 0).  Revert the previous behaviour where the lessThan
check won't succeed for a 0/std::nullopt value.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::commitPotentialTap):

Canonical link: https://commits.webkit.org/291584@main